--- a/checkin/views/add_visitor.html
+++ b/checkin/views/add_visitor.html
@@ -2,7 +2,7 @@
 
 <body>
   <h1> I'm an add visitor page! </h1>
-  <form action="/admin/visitors" method="post">
+  <form action="/admin/visitor" method="post">
     <div>
       <input type="textbox" name="visitor_id" >
     </div>
