--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <title>{% block title %}User accounts demo{% endblock %}</title>
+    <title>{% block title %}Checkin{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
 
@@ -35,24 +35,22 @@
       <hr/>
       <p>
         {% if not user %}
-          <a href="/login">Login (and forgot password)</a>
+          <a href="/sign_in">Login</a>
         {% else %}
-          Logged in as <span style="background-color: OldLace">{{ user.name }}</span> | <a href="/logout">Logout</a>
+          Logged in as <span style="background-color: OldLace">{{ user.username }}</span> | <a href="/sign_out">Logout</a>
         {% endif %}
         |
         <a href="/">Home</a>
         |
-        <a href="/admin/adduser">New user</a>
+        <a href="/checkin_visitor">Checkin Student</a>
+        {% if user.is_admin %}
+          <a href="/admin/user">New user</a>
         |
-        <a href="/authenticated">Secured page</a> (you can see this after login)
+          <a href="/admin/visitor">New visitor</a>
         |
-        <a href="http://blog.abahgat.com/2013/01/07/user-authentication-with-webapp2-on-google-app-engine/">Tutorial</a>
-        |
-        <a href="http://github.com/abahgat/webapp2-user-accounts">Source code</a>
-      </p>
-      <p>
-        Got questions? <a href="http://blog.abahgat.com/about">Get in touch</a>.
-        <small>And if you want to <strong>donate</strong> a little something, <a href="http://abahgat.github.io/webapp2-user-accounts#donate">here</a> a few options.</small>
+          <a href="/admin/get_random_visitor">Run Raffle</a>
+        {% endif %}
+
       </p>
     </footer>
   </div>
