--- a/checkin/views/add_visitor.html
+++ b/checkin/views/add_visitor.html
@@ -1,15 +1,14 @@
-<html>
+{% extends "main.html" %}
 
-<body>
-  <h1> I'm an add visitor page! </h1>
-  <form action="/admin/visitor" method="post">
-    <div>
-      <input type="textbox" name="visitor_id" >
-    </div>
-    <div>
-      <input type="submit" value="Add Visitor">
-    </div>
-  </form>
-</body>
-
-</html>
+{% block maincontent %}
+<h1> I'm an add visitor page! </h1>
+<form action="/admin/visitor" method="post">
+  <div>
+    <label for="visitor_id">visitor_id</label>
+    <input type="textbox" name="visitor_id" >
+  </div>
+  <div>
+    <input type="submit" value="Add Visitor">
+  </div>
+</form>
+{% endblock %}
