--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -50,6 +50,8 @@
           <a href="/admin_panel/visitor">New visitor</a>
         |
           <a href="/admin_panel/get_random_visitor">Run Raffle</a>
+        |
+          <a href="/student">Student View</a>
         {% endif %}
 
       </p>
