--- a/checkin/views/studentlogin.html
+++ b/checkin/views/studentlogin.html
@@ -4,10 +4,10 @@
 
 <h1>Enter your visitor ID</h1>
 
-<form class="form" action= "/students" method="POST">
-	<label for="visitor_id">Visitor_IDS</label>
+<form class="form" action= "/student" method="POST">
+	<label for="visitor_id">Visitor_ID</label>
   <input type="text" value="" name="visitor_id"/>
-	<button type="submit" class="btn">Login</button>
+	<button type="submit" class="btn">View</button>
 </form>
 
 {% endblock %}
