--- a/checkin/views/add_user.html
+++ b/checkin/views/add_user.html
@@ -6,7 +6,7 @@
 {% block maincontent %}
 
 <h1>Register a new user</h1>
-<form action="/admin/user" method="POST">
+<form action="/admin_panel/user" method="POST">
 <label for="username">Username</label>
 <input type="text" name="username" />
 <label for="email">Email address</label>
