--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -8,6 +8,8 @@
     <title>{% block title %}Checkin{% endblock %}</title>
     <!-- Bootstrap -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom Stylesheet -->
+    <link href="/css/checkin.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -55,6 +57,7 @@
         {% endif %}
 
       </p>
+      <p>Checkin App created by John Langhauser and Nathaniel Granor for the 2016 <a href="http://www.csfair.nyc/">NYC CS Fair</a>.</p>
     </footer>
   </div>
 
