--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -27,6 +27,11 @@
   <body>
 
   <div class="content">
+    <div class="row orangebg">
+		<div>
+			<img class="center-block logo" src="img/logo.png">
+		</div>
+	</div>
     {% block maincontent %}
 
     {% endblock %}
