--- a/checkin/views/index.html
+++ b/checkin/views/index.html
@@ -17,6 +17,13 @@
     //var raw =
     //document.getElementById("disp").innerHTML = raw;
   </script>
+{% else %}
+  <div>
+  		<div class="center-block text-center">
+  		<br>
+  		<a class="btn btn-primary btn-lg " href="sign_in">Booth Login</a><br><br>
+  		<a class="btn btn-primary btn-lg  " href="student">Student Login</a><br></div>
+  	</div>
 {% endif %}
 
 {% endblock %}
