fixing bugs, cleaning up error pages, switching to wysiwyg, generally just making it awesome

--- a/checkin/views/add_user.html
+++ b/checkin/views/add_user.html
@@ -11,6 +11,8 @@
 <input type="text" name="username" />
 <label for="email">Email address</label>
 <input type="text" name="email" />
+<label for="vendorname">Vendor Name</label>
+<input type="text" name="vendorname" />
 <label for="password">Password</label>
 <input type="password" name="password" />
 <label for="admin">Admin</label>
