--- a/checkin/views/sign_in.html
+++ b/checkin/views/sign_in.html
@@ -16,6 +16,7 @@
 	<label for="password">Password</label>
 	<input type="password" name="password"/>
 	<button type="submit" class="btn">Login</button>
+  <input type="hidden" name="redirect_to" value="{{ redirect_to }}"/>
 </form>
 
 
