--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -7,6 +7,7 @@
 {% for profile in profiles %}
 <div class="row">
   <div class="col-sm-6 col-md-4">
+    <h1> {{ index }} </h1>
     <div class="thumbnail">
       {% autoescape off %}{{ profile }}{% endautoescape %}
     </div>
