making logo absolute instead of relative path

--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -53,7 +53,7 @@
   <div class="content">
     <div class="row orangebg">
 		<div>
-			<img class="center-block logo" src="img/logo.png">
+			<img class="center-block logo" src="/img/logo.png">
 		</div>
 	</div>
   {% if flash_message and success %}
