--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -14,5 +14,5 @@
   </div>
 </div>
 {% endfor %}
-
+<h2><a href="https://www.surveymonkey.com/r/NYCCSFair2016-surveyS">Please complete a survey about your experience at the fair</h2>
 {% endblock %}
