--- a/checkin/views/studentlogin.html
+++ b/checkin/views/studentlogin.html
@@ -2,10 +2,10 @@
 
 {% block maincontent %}
 
-<h1>Enter your visitor ID</h1>
+<h1>Log in using the six-digit ID number printed on your event badge</h1>
 
 <form class="form" action= "/student" method="POST">
-	<label for="visitor_id">Visitor_ID</label>
+	<label for="visitor_id">ID Code</label>
   <input type="text" value="" name="visitor_id"/>
 	<button type="submit" class="btn">View</button>
 </form>
