fixing problem with long profiles

--- a/checkin/views/edit_user.html
+++ b/checkin/views/edit_user.html
@@ -7,7 +7,7 @@
 <form action="/edit" method="post" id = "usrform">
   <div>
     <textarea rows="10" cols="50" name="profile" id="profile" form="usrform">
-      {% autoescape off %} {{ user.profile }} {% endautoescape %}
+      {% autoescape off %} {{ userprofile }} {% endautoescape %}
     </textarea>
   </div>
   <div>
