--- a/checkin/views/index.html
+++ b/checkin/views/index.html
@@ -8,7 +8,7 @@
   <div class="row">
     <div class="col-sm-6 col-md-4">
       <div class="thumbnail">
-        {% autoescape off %}{{ user.profile }}{% endautoescape %}
+        {% autoescape off %}{{ userprofile }}{% endautoescape %}
       </div>
     </div>
   </div>
