--- a/checkin/views/add_visitor.html
+++ b/checkin/views/add_visitor.html
@@ -2,7 +2,7 @@
 
 {% block maincontent %}
 <h1> I'm an add visitor page! </h1>
-<form action="/admin/visitor" method="post">
+<form action="/admin_panel/visitor" method="post">
   <div>
     <label for="visitor_id">visitor_id</label>
     <input type="textbox" name="visitor_id" >
