--- a/checkin/views/student.html
+++ b/checkin/views/student.html
@@ -3,7 +3,7 @@
 {% block maincontent %}
 
 <h1>Student Page</h1>
-<h3><a href="https://www.surveymonkey.com/r/NYCCSFair2016-surveyS" target="_blank">Please complete a survey about your experience at the fair</h3>
+<h3><a href="https://www.surveymonkey.com/r/NYCCSFair2016-surveyS" target="_blank">Please complete a survey about your experience at the fair</a></h3>
 
 {% for profile in profiles %}
 <div class="row">
