--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -97,7 +97,7 @@
         <div class="row" style="margin-left:0px;" >
             <a href="/deployments">Manage Deployments</a>
           |
-            <a href="/admin_panel/user">Manage Users</a>
+            <a href="/users">Manage Users</a>
           |
             <a href="/sudo/admins">Admin View</a>
         </div>
@@ -107,9 +107,9 @@
         <div class="row" style="margin-left:0px;" >
             <a href="/deployments">Manage Deployments</a>
           |
-            <a href="/admin_panel/user">Manage Users</a>
+            <a href="/users">Manage Users</a>
           |
-            <a href="/admin_panel/visitor">Manage Visitors</a>
+            <a href="/visitors">Manage Visitors</a>
           |
             <a href="/admin_panel/get_random_visitor">Run Raffle</a>
           |
