--- a/checkin/views/sign_in.html
+++ b/checkin/views/sign_in.html
@@ -10,7 +10,7 @@
 
 {% endif %}
 
-<form class="form" action= "/sign_in" method="POST">
+<form class="form" action= "sign_in" method="POST">
 	<label for="username">Username</label>
 	<input type="text" value="{{ username }}" name="username"/>
 	<label for="password">Password</label>
