lots of work hardening routes and correcting missing deployment areas. Also sorted out bulk upload for visitors and fixed up sign-ins and checkins

--- a/checkin/views/visitors_index.html
+++ b/checkin/views/visitors_index.html
@@ -55,7 +55,7 @@
 {% endif %}
 <h2> Add Bulk Visitors </h2>
 <h4> Note: bulk upload file should be a list of visitor IDs, one per line</h4>
-<form enctype="multipart/form-data" action="/visitors" method="post">
+<form enctype="multipart/form-data" action="visitors" method="post">
     <label for="filename">Filename</label>
     <input id="bulkfile" type="file" name="bulkfile" />
     <input type="submit" value="Upload" />
