--- a/checkin/views/edit_user.html
+++ b/checkin/views/edit_user.html
@@ -4,7 +4,7 @@
 
 <h1>Edit your profile</h1>
 
-<form action="/edit" method="post" id = "usrform">
+<form action="edit" method="post" id = "usrform">
   <div>
     <textarea rows="10" cols="50" name="profile" id="profile" form="usrform">
       {% autoescape off %} {{ userprofile }} {% endautoescape %}
