adding in a report - trying to add in a sample student checkin process

--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -101,6 +101,7 @@
           Logged in as <span style="background-color: OldLace">{{ user.username }}</span> | <a href="sign_out">Logout</a>        |
           <a href="checkin_visitor">Checkin Student</a> |
           <a href="edit">Edit Profile</a> |
+          <!--<a href="sample">Sample Checkin</a> |-->
           <a href="/">Home</a>
           |
         {% endif %}
@@ -109,6 +110,8 @@
             <a href="/deployments">Manage Deployments</a>
           |
             <a href="/users">Manage Users</a>
+          |
+              <a href="/reports">View Reports</a>
           |
             <a href="/sudo/admins">Admin View</a>
         </div>
