adding in sample user checkin feature

--- a/checkin/views/sample.html
+++ b/checkin/views/sample.html
@@ -3,12 +3,33 @@
 {% block maincontent %}
 
 <h1>Sample Checkin</h1>
-<h2>Use this page to practice the check in process!</h2>
-<h3>Open this webpage on a second device (i.e. not the device you are using to scan QR codes).</h3>
-<h3>On your primary device, use your QR code reader app to scan the QR code below. You may be prompted to login to your account.</h3>
-<h3>Once you have logged in, you can also check in visitors manually using the 6 digit numeric code and the "Checkin student" link.</h3>
-<h3>If you have any problems, email ngranor@microsoft.com</h3>
-<img src = '{{ sample_url }}' />
+{% if complete == 'false' %}
 
+  <h2>Use this page to practice the check in process!</h2>
+  <h3>Open this webpage on a second device (i.e. not the device you are using to scan QR codes).</h3>
+  <h3>On your primary device, use your QR code reader app to scan the QR code below. You may be prompted to login to your account.</h3>
+  <h3>Once you have logged in, you can also check in visitors manually using the 6 digit numeric code and the "Checkin student" link.</h3>
+  <h3>If you have any problems, email ngranor@microsoft.com</h3>
+  <center><img src = '{{ sample_url }}' /></center>
 
+  <script>
+
+  function refresh() {
+      location.reload();
+      setTimeout(refresh, 5000);
+  }
+
+  setTimeout(refresh, 5000);
+  </script>
+
+{% else %}
+  <center>
+    <h1>Congratulations, you have successfully checked in this sample student! </h1>
+    <h1>Remember that students can see the profiles of all the booths they checked into. </h1>
+    <h1><a href="edit"> Here's what yours looks like.</a></h1>
+
+    <form action="sample" method="POST">
+      <input type="submit" value="Refresh Sample User" />
+    </form>
+{% endif %}
 {% endblock %}
