--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -101,7 +101,7 @@
           Logged in as <span style="background-color: OldLace">{{ user.username }}</span> | <a href="sign_out">Logout</a>        |
           <a href="checkin_visitor">Checkin Student</a> |
           <a href="edit">Edit Profile</a> |
-          <!--<a href="sample">Sample Checkin</a> |-->
+          <a href="sample">Sample Checkin</a> |
           <a href="/">Home</a>
           |
         {% endif %}
