adding in fix for sign in redirect for checkins and tentative fix to nginx gateway

--- a/checkin/views/sample.html
+++ b/checkin/views/sample.html
@@ -11,6 +11,7 @@
   <h3>Once you have logged in, you can also check in visitors manually using the 6 digit numeric code and the "Checkin student" link.</h3>
   <h3>If you have any problems, email ngranor@microsoft.com</h3>
   <center><img src = '{{ sample_url }}' /></center>
+  <center><h3>Visitor ID: 9999999</h3></center>
 
   <script>
 
