--- a/checkin/views/main.html
+++ b/checkin/views/main.html
@@ -62,7 +62,7 @@
       {% endif %}
 		</div>
 	</div>
-  {% if user and user.sudoer %}
+  {% if user and sudoer %}
   <div class="alert alert-warning" role="alert">
     You are currently logged in as someone else.
   <div>
